CC-19: SonarCloudChange